# lco_observing_tools

./: .travis.yml  CHANGELOG.rst  MANIFEST.in  README.md  setup.cfg
docs/sphinx/: api.rst  conf.py  index.rst  intro.rst
python/lco_observing_tools/: __init__.py  dithers.py  exceptions.py  focus.py  versions.py
tests/: test_main.py
