[metadata]
name = sdss-lco_observing_tools
version = 0.1.0-alpha.0
author = José Sánchez-Gallego
author_email = gallegoj@uw.edu
description = Tools for observing at LCO
url = https://github.com/sdss/lco_observing_tools
project_urls =
	Repository = https://github.com/sdss/lco_observing_tools
	Documentation = https://sdss-lco_observing_tools.readthedocs.org
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Documentation :: Sphinx
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.9
packages = find:
package_dir =
	= python
install_requires =
	sdsstools>=1.0.0
	click>=8.0.0
	matplotlib>=3.1.1
	sep>=1.2.1
	seaborn>=0.12.2
	pandas>=1.4.3
	astropy>=5.1
	sdss-clu>=1.9.2
scripts =
	bin/focus_curve
	bin/cherno_dither

[options.entry_points]
console_scripts =
    lco-versions = lco_observing_tools.versions:get_versions

[options.packages.find]
where =
	python

[options.package_data]
lco_observing_tools =
	sdss-coordio>=1.6.1

[options.extras_require]
dev =
	ipython>=7.9.0
	flake8>=3.7.9
	doc8>=0.8.0
	pytest>=5.2.2
	pytest-asyncio>=0.10.0
	pytest-cov>=2.8.1
	pytest-mock>=1.13.0
	pytest-sugar>=0.9.2
	isort>=4.3.21
	codecov>=2.0.15
	coverage[toml]>=5.0
	ipdb>=0.12.3
	invoke>=1.3.0
	twine>=3.1.1
	wheel>=0.33.6
	sphinx>=3.0.0
	black>=23.0.0

[isort]
line_length = 79
sections =
	FUTURE
	STDLIB
	THIRDPARTY
	SDSS
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party = lco_observing_tools
known_sdss_party =
	sdssdb
	sdsstools
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[flake8]
ignore =
	H101
	E722
	W504
	W505
per-file-ignores =
    */__init__.py:E,W
max-line-length = 99

[tool:pytest]
addopts = --cov lco_observing_tools --cov-report html -W ignore

[coverage:run]
branch = true
include =
	python/lco_observing_tools/*
omit =
    */utils/*.py
    */__init__.py

[coverage:report]
exclude_lines =
